--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Categories/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@* @model IEnumerable<Vestigio.Models.Category> *@
-@model PaginatedList<Vestigio.Models.Category>
+@model Vestigio.Utilities.PaginatedList<Vestigio.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
