--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Details.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Details.cshtml
@@ -25,9 +25,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Challenge)
         </dt>
-        <dd class = "col-sm-10">
+@*         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Challenge.Solution)
-        </dd>
+        </dd> *@
     </dl>
 </div>
 <div>
