--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/OrderDetails/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/OrderDetails/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@* @model IEnumerable<Vestigio.Models.OrderDetail> *@
-@model PaginatedList<Vestigio.Models.OrderDetail>
+@model Vestigio.Utilities.PaginatedList<Vestigio.Models.OrderDetail>
 
 @{
     ViewData["Title"] = "Index";
