--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Orders/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Orders/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@* @model IEnumerable<Vestigio.Models.Order> *@
-@model PaginatedList<Vestigio.Models.Order>
+@model Vestigio.Utilities.PaginatedList<Vestigio.Models.Order>
 
 @{
     ViewData["Title"] = "Index";
