--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Delete.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Delete.cshtml
@@ -26,9 +26,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Challenge)
         </dt>
-        <dd class = "col-sm-10">
+@*         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Challenge.Solution)
-        </dd>
+        </dd> *@
     </dl>
     
     <form asp-action="Delete">
