--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Images/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Product.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Challenge.Solution)
+@*                 @Html.DisplayFor(modelItem => item.Challenge.Solution) *@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
