--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Products/Create.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Products/Create.cshtml
@@ -41,6 +41,7 @@
                                     <input asp-for="Price" class="form-control form-control-lg" placeholder="59.99..." />
                                     <span asp-validation-for="Price" class="text-danger"></span>
                                 </div>
+
                             </div>
 
                             <!-- Right Column -->
@@ -52,10 +53,10 @@
                                     <span asp-validation-for="Stock" class="text-danger"></span>
                                 </div>
 
-                                <!-- Rarity Level (Number Input) -->
+                                <!-- Rarity Level -->
                                 <div class="form-group mb-4">
                                     <label asp-for="RarityLevel" class="form-label fw-bold">Rarity Level</label>
-                                    <input asp-for="RarityLevel" type="number" class="form-control form-control-lg" placeholder="1 for common, 10 for legendary..." min="1" max="10" />
+                                    <input asp-for="RarityLevel" class="form-control form-control-lg" placeholder="1 for common, 10 for legendary..." min="1" max="10" />
                                     <span asp-validation-for="RarityLevel" class="text-danger"></span>
                                 </div>
 
@@ -65,6 +66,7 @@
                                     <select asp-for="CategoryId" class="form-control form-control-lg" asp-items="ViewBag.CategoryId">
                                         <option value="">Select Category</option>
                                     </select>
+                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
                                 </div>
                             </div>
                         </div>
