--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <div class="d-flex align-items-center gap-4">
     @if (SignInManager.IsSignedIn(User))
