--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/_ViewImports.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Vestigio
 @using Vestigio.Models
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
