--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Categories/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Categories/Index.cshtml
@@ -1,21 +1,19 @@
-﻿@* @model IEnumerable<Vestigio.Models.Category> *@
-@model Vestigio.Utilities.PaginatedList<Vestigio.Models.Category>
+﻿@model IEnumerable<Vestigio.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Categories</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New Category</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                Category
-                @* @Html.DisplayNameFor(model => model.Name) *@
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th></th>
         </tr>
@@ -35,17 +33,3 @@
 }
     </tbody>
 </table>
-
-@* Poner botones de página Siguiente y Anterior *@ 
-@{
-    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
-}
-<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)"
-   class="btn btn-outline-secondary @prevDisabled">
-    Anterior
-</a>
-<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)"
-   class="btn btn-outline-secondary @nextDisabled">
-    Siguiente
-</a> 
