--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Challenges/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Challenges/Index.cshtml
@@ -243,9 +243,9 @@
                 <div class="col-md-3">
                     <label class="form-label small text-uppercase text-muted fw-500">Experience Range</label>
                     <div class="input-group">
-                        <input type="number" name="minExperience" class="form-control" value="@minExperience" min="0">
+                        <input type="number" name="minExp" class="form-control" value="@minExp" min="0">
                         <span class="input-group-text">-</span>
-                        <input type="number" name="maxExperience" class="form-control" value="@maxExperience" min="0">
+                        <input type="number" name="maxExp" class="form-control" value="@maxExp" min="0">
                     </div>
                 </div>
 
